2012-11-14  Kent Tamura  <tkent@chromium.org>

        [Chromium] Add API to expose WebCore::DateTimeChooser
        https://bugs.webkit.org/show_bug.cgi?id=101196

        Reviewed by Hajime Morita.

        Add ability to open date/time choosers to WebViewClient.

        - ExternalDateTimeChooser forwards DateTimeChooser requests from WebCore
          to WebViewClient, and waits for WebDateTimeChooerCompletion notifications.
        - WebDateTimeChooserParams contains various information to create
          chooser UI.
        - WebDateTimeChooserCompletion informs value selection by users to
          ExternalDateTimeChooser.

        The design is very similar to existing WebFileChooserParams and
        WebFileChooserCompletion.

        These interfaces are used only if ENABLE_INPUT_MULTIPLE_FIELDS_UI is not
        enabled, that is to say, in Chromium-Android port. Non-Android Chromium
        ports use DateTimeChooserImpl and WebKit-internal choosers.

        * WebKit.gyp: Add WebDateTimeChooserCompletion.h,
        WebDateTimeChooserParams.h, ExternalDateTimeChooser.cpp, and
        ExternalDateTimeChooser.h.
        * public/WebDateTimeChooserCompletion.h: Added.
        (WebDateTimeChooserCompletion):
        (WebKit::WebDateTimeChooserCompletion::~WebDateTimeChooserCompletion):
        * public/WebDateTimeChooserParams.h: Added.
        (WebDateTimeChooserParams):
        (WebKit::WebDateTimeChooserParams::WebDateTimeChooserParams):
        * public/WebViewClient.h:
        (WebKit): Add some forward declarations.
        (WebKit::WebViewClient::openDateTimeChooser): Added.
        * src/ChromeClientImpl.cpp:
        (WebKit::ChromeClientImpl::openDateTimeChooser):
        Creates ExternalDateTimeChooser if !ENABLE(INPUT_MULTIPLE_FIELDS_UI).
        * src/ExternalDateTimeChooser.cpp: Added.
        (WebDateTimeChooserCompletionImpl): An implementation of
        WebDateTimeChooserCompletion. When didChooseValue or didCancelChooser is